// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component calls onToggle when a radio button is selected 1`] = `
<div>
  <div
    class="quill-radio-group"
  >
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          checked=""
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option1"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option1_false"
            fill="#7e7e7e"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 1
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option2"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option2_false"
            fill="#7e7e7e"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 2
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button quill-radio-group__item--active"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option3"
        />
        <span>
          <svg
            data-testid="dt_checked_icon_option3_false"
            fill="#000000"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 20c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20M8 9c-1.094 0-2.062.594-2.625 1.5-.531.938-.531 2.094 0 3A3.03 3.03 0 0 0 8 15c1.063 0 2.031-.562 2.594-1.5.531-.906.531-2.062 0-3C10.03 9.594 9.063 9 8 9"
              />
            </g>
            <defs>
              <clippath
                id="91a873acac72fe8bbe91e3322bd04aa8__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup component renders radio buttons with correct labels 1`] = `
<div>
  <div
    class="quill-radio-group"
  >
    <div>
      <label
        class="quill-radio-button quill-radio-group__item--active"
        data-testid="dt_quill_radio_button"
      >
        <input
          checked=""
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option1"
        />
        <span>
          <svg
            data-testid="dt_checked_icon_option1_false"
            fill="#000000"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 20c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20M8 9c-1.094 0-2.062.594-2.625 1.5-.531.938-.531 2.094 0 3A3.03 3.03 0 0 0 8 15c1.063 0 2.031-.562 2.594-1.5.531-.906.531-2.062 0-3C10.03 9.594 9.063 9 8 9"
              />
            </g>
            <defs>
              <clippath
                id="91a873acac72fe8bbe91e3322bd04aa8__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 1
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option2"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option2_false"
            fill="#7e7e7e"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 2
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option3"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option3_false"
            fill="#7e7e7e"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup component should not call onToggle when a disabled radio button is clicked 1`] = `
<div>
  <div
    class="quill-radio-group"
  >
    <div>
      <label
        class="quill-radio-button quill-radio-group__item--active"
        data-testid="dt_quill_radio_button"
      >
        <input
          checked=""
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option1"
        />
        <span>
          <svg
            data-testid="dt_checked_icon_option1_false"
            fill="#000000"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 20c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20M8 9c-1.094 0-2.062.594-2.625 1.5-.531.938-.531 2.094 0 3A3.03 3.03 0 0 0 8 15c1.063 0 2.031-.562 2.594-1.5.531-.906.531-2.062 0-3C10.03 9.594 9.063 9 8 9"
              />
            </g>
            <defs>
              <clippath
                id="91a873acac72fe8bbe91e3322bd04aa8__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 1
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          disabled=""
          name="test"
          type="radio"
          value="option2"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option2_true"
            fill="#b8b8b8"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 2
        </span>
      </label>
    </div>
    <div>
      <label
        class="quill-radio-button"
        data-testid="dt_quill_radio_button"
      >
        <input
          class="quill-radio-button__input"
          name="test"
          type="radio"
          value="option3"
        />
        <span>
          <svg
            data-testid="dt_unchecked_icon_option3_false"
            fill="#7e7e7e"
            height="24"
            role="img"
            viewBox="0 0 16 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M8 5a6.98 6.98 0 0 0-6.062 3.5c-1.282 2.188-1.282 4.844 0 7C3.188 17.688 5.467 19 8 19c2.5 0 4.781-1.312 6.031-3.5 1.281-2.156 1.281-4.812 0-7C12.781 6.344 10.5 5 8 5m0 15c-2.875 0-5.5-1.5-6.937-4-1.438-2.469-1.438-5.5 0-8A8.02 8.02 0 0 1 8 4c2.844 0 5.469 1.531 6.906 4 1.438 2.5 1.438 5.531 0 8A7.94 7.94 0 0 1 8 20"
              />
            </g>
            <defs>
              <clippath
                id="a0161df4985017ebb2c6f8a038d991f9__a"
              >
                <path
                  d="M0 0h16v24H0z"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <span
          class="quill-radio-button__label"
        >
          Option 3
        </span>
      </label>
    </div>
  </div>
</div>
`;
